--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
     "start": "node ./dist/index.js",
     "dev": "ts-node-dev --files ./src/index.ts",
     "build": "tsc",
-    "swagger": "tsoa spec",
     "typecheck": "tsc --noEmit",
     "test": "echo \"Error: no test specified\" && exit 1",
     "postinstall": "npm run build"
@@ -34,7 +33,6 @@
     "joi": "17.6.0",
     "jsonwebtoken": "8.5.1",
     "morgan": "1.10.0",
-    "mysql2": "2.3.3",
-    "tsoa": "^3.14.1"
+    "mysql2": "2.3.3"
   }
 }
